[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/art/fullscreen/OpenDrawer.png" type="Texture" id=1]
[ext_resource path="res://assets/art/interactive/interactive/written_paper_no_background.png" type="Texture" id=2]
[ext_resource path="res://scenes/interact/FSOpenCabinet.gd" type="Script" id=3]
[ext_resource path="res://assets/art/interactive/interactive/key2.png" type="Texture" id=4]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("WrittenPaperNoBackground:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 688, 672 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "paper_left"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("WrittenPaperNoBackground:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 688, 672 ), Vector2( 456, 672 ), Vector2( 376, 672 ), Vector2( 360, 672 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "paper_right"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("WrittenPaperNoBackground:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 688, 672 ), Vector2( 920, 672 ), Vector2( 1000, 672 ), Vector2( 1040, 672 ) ]
}

[node name="OpenCabinet" type="Popup"]
pause_mode = 2
margin_left = -136.0
margin_top = -424.0
margin_right = -136.0
margin_bottom = -424.0
focus_mode = 2
input_pass_on_modal_close_click = false
script = ExtResource( 3 )

[node name="OpenDrawer" type="Sprite" parent="."]
position = Vector2( 672, 736 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )

[node name="Key2" type="Sprite" parent="."]
position = Vector2( 680, 680 )
scale = Vector2( 10, 10 )
texture = ExtResource( 4 )

[node name="StaticPaper" type="Sprite" parent="."]
position = Vector2( 680, 672 )
scale = Vector2( 8, 8 )
texture = ExtResource( 2 )

[node name="WrittenPaperNoBackground" type="Sprite" parent="."]
position = Vector2( 688, 672 )
scale = Vector2( 8, 8 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/paper_left = SubResource( 1 )
anims/paper_right = SubResource( 4 )

[connection signal="about_to_show" from="." to="." method="_on_OpenCabinet_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_OpenCabinet_popup_hide"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
